# legal_contracts

./: .gitignore  HeyGen_Demo_Script_FINAL.md  PROMPTS_README.md  README.md  debug_quotes.py  docker-compose.yml  env.example  pyproject.toml  requirements.txt  show_prompt.py  test_dedupe_simple.py  test_findings_debug.py  test_paragraph_48.py  tunnel.sh
app/: aggregate.py  annotated_pdf.py  categories.py  fewshot.py  headings.py  llm.py  main.py  models.py  parser.py  prompts.py  storage.py  validate_legal_refs.py
configs/: categories.json
contract_cuad/: __init__.py  categories.py  chunking.py  classifier.py  cli.py  config.py  cuad_fewshot.py  llm_client.py
data/: category_definitions_new.csv  fewshot_uk_redflags.txt
data/fewshot_by_category/: manifest.json
data/fewshot_cache/: affiliate_license_licensee.json  agreement_date.json  anti_assignment.json  cap_on_liability.json  document_name.json  effective_date.json  expiration_date.json  governing_law.json  insurance.json  ip_ownership_assignment.json  license_grant.json  liquidated_damages.json  manifest.json  minimum_commitment.json  no_solicit_of_employees.json  non_transferable_license.json  notice_period_to_terminate_renewal.json  parties.json  (+5 more)
docker/: Dockerfile  requirements.txt
docs/: README.md
notebooks/: demo_contract_classification.ipynb
scripts/: refresh_example_contract.sh  update_uk_tenancy_statutes.py  verify_example_quotes.py
templates/: annotated.html  index.html
tests/: conftest.py  test_categories.py  test_chunking.py  test_classifier.py  test_cuad_fewshot.py  test_json_parsing.py
(+4 files in other folders)
